@@ -61,11 +61,15 @@ namespace Marvel {
 
 		void draw() override
 		{
+			pushColorStyles();
+
 			ImGui::Separator();
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
 				ImGui::SetTooltip("%s", getTip().c_str());
+
+			popColorStyles();
 		}
 
 		[[nodiscard]] bool areDuplicatesAllowed() const override { return true; }
