@@ -28,6 +28,7 @@ namespace Marvel{
 
 		void draw() override
 		{
+			pushColorStyles();
 
 			if(m_histogram)
 				ImGui::PlotHistogram(m_label.c_str(), m_value.data(), m_value.size(), 0, m_overlay.c_str(), 
@@ -35,6 +36,8 @@ namespace Marvel{
 			else
 				ImGui::PlotLines(m_label.c_str(), m_value.data(), m_value.size(), 0, m_overlay.c_str(), 
 					m_min, m_max, ImVec2((float)m_width, (float)m_height));
+
+			popColorStyles();
 		}
 
 		void setPyValue(PyObject* value) override
