@@ -28,6 +28,12 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.2.1
 
+Changes:
+- Widgets: Changed "add_item_color style" to "set_item_color"
+
+New Commands:
+- Widgets: Added "clear_item_color"
+
 -----------------------------------------------------------------------
  VERSION 0.2.0 (9/5/2020)
 -----------------------------------------------------------------------
